--- a/app/views/shared/_contact.html.erb
+++ b/app/views/shared/_contact.html.erb
@@ -25,9 +25,10 @@
 
 						<div id="sendmessage">Tu es inscrit à la newsletter. Merci !</div>
 						<div id="errormessage"></div>
-						<form action="" method="post" role="form" class="contactForm">
+						<form action="/gotham" method="post" role="form" class="contactForm">
+							<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 							<div class="form-group">
-								<h3>Souhaites-tu t'inscire à la newsletter ?</h3>
+								<h3>Souhaites-tu t'inscrire à la newsletter ?</h3>
 							</div>
 							<div class="form-group">
 								<input type="text" name="name" class="form-control input-text" id="name" placeholder="Ton nom" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
